--- a/main/chat/client/CMakeLists.txt
+++ b/main/chat/client/CMakeLists.txt
@@ -6,7 +6,7 @@ target_include_directories(client_lib PUBLIC include)
 target_include_directories(client_lib SYSTEM PUBLIC
   ${CMAKE_SOURCE_DIR}/externals/SDL/include
 )
-target_link_libraries(client_lib PUBLIC common_lib imgui-sdl SDL3::SDL3)
+target_link_libraries(client_lib PUBLIC common_lib imgui::imgui SDL3::SDL3)
 target_compile_options(client_lib PRIVATE ${PROJECT_WARNING_FLAGS})
 
 # Client executable
